--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>U-DO</title>
+
 <!-- Bootstrap files -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,17 +27,18 @@
 </div>
 
 
+<!-- It submits the entered data to the current page. If you put another page link for the # it will submit the form data to that page-->
 <!-- Login Form -->
-<div class="login-form mt-5 hideCons" id="login">
+<div class="cone mt-5 hideCons" id="login">
 	<form action="#" method="post">
         <h2 class="text-left">Login</h2>   
-        <div class="form-group">
+        <div class="pack">
         	<input type="email" class="form-control" name="email" placeholder="Email" required="required">
         </div>
-		<div class="form-group">
+		<div class="pack">
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
         </div>        
-        <div class="form-group">
+        <div class="pack">
             <button type="submit" name="loginForm" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
     </form>
@@ -45,29 +47,29 @@
 
 
 <!-- Sign Up Form -->
-<div class="signup-form mt-5 hideCons hide" id="signup">
+<div class="enre mt-5 hideCons hide" id="signup">
     <form action="#" method="post">
 		<h2 class="text-left">Sign Up</h2>
 
-        <div class="form-group mt-4">
+        <div class="pack mt-4">
 			<div class="row">
 				<div class="col"><input type="text" class="form-control" name="first_name" placeholder="First Name" required="required"></div>
 				<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Last Name" required="required"></div>
 			</div>        	
         </div>
-        <div class="form-group">
+        <div class="pack">
         	<input type="email" class="form-control" name="email" placeholder="Email" required="required">
         </div>
-		<div class="form-group">
+		<div class="pack">
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
         </div>
-		<div class="form-group">
+		<div class="pack">
             <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
         </div>        
-        <div class="form-group">
+        <div class="pack">
 			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
 		</div>
-		<div class="form-group">
+		<div class="pack">
             <button type="submit" name="userLoginForm" class="btn btn-primary btn-lg">Sign Up</button>
         </div>
     </form>
